4-module/k8s_configs/ingress/ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
  namespace: prod
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:647614927793:certificate/919141c6-3ecd-46a5-9465-3aeece92eab7
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: http
      appProtocol: https
    - name: api
      port: 8000
      protocol: TCP
      targetPort: http
      appProtocol: https
  selector:
    app: main-nginx-ingress
