4-module/k8s_configs/ingress/app-c-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: nginx
  name: app-c-ingress
spec:
  rules:
  - host: appc.iansoares.tk
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: apps-c
              port:
                number: 80
