4-module/k8s_configs/ingress/main-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: nginx
  name: main-ingress
spec:
  rules:
  - host: cluster.iansoares.tk
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: apps-a
              port:
                number: 80  
        - path: "/appb"
          pathType: Prefix
          backend:
            service: 
              name: apps-b
              port:
                number: 80
        - path: "/api"
          pathType: Prefix
          backend:
            service: 
              name: api-svc
              port:
                number: 8000
  - host: appd.iansoares.tk
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: apps-d
              port:
                number: 80
  - host: appc.iansoares.tk
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: apps-c
              port:
                number: 80
